--- a/resources/default-properties/default_master.properties
+++ b/resources/default-properties/default_master.properties
@@ -5,20 +5,20 @@ appServerDir = /usr/local/tomcat
 # database  host
 dbType=postgresql
 # Docker Compose
-#dbHost=repository
+dbHost=host.docker.internal
 # For docker for desktop windows and mac
 # host.docker.internal
 ## for k8s
 ## repository-postgresql.default.svc.cluster.local
 
-dbHost=repository-postgresql.default.svc.cluster.local
+# dbHost=repository-postgresql.default.svc.cluster.local
 js.dbName=jasperserver
 dbUsername=postgres
 dbPassword=postgres
 
 #############SCALABLE QUERY ENGINE PROPERTIES###########
-scalableQueryEngine.enabled=true
-scalableQueryEngine.url=http://localhost:8081
+# scalableQueryEngine.enabled=true
+# scalableQueryEngine.url=http://localhost:8081
 
 chrome.path=/usr/bin/chromium
 
